@@ -1,6 +1,7 @@
 [global]
 system = Debian
 virtualizer = Virt
+backend = kvm
 verbose = 1
 wait = 0
 
