@@ -1,4 +1,5 @@
 HEAD
+    + Support for different libvirt backends (kvm, vbox, vmware)
     + Add skip option to the step by step execution
     + Stop before each test on step by step execution
     + Ignore critical attribute if running with -wait-fail
